--- a/package.json
+++ b/package.json
@@ -3,16 +3,32 @@
   "scripts": {
     "configure": "node-gyp configure",
     "build": "node-gyp build",
-    "test": "mocha"
-
+    "test": "mocha",
+    "install": "node-gyp rebuild"
   },
   "devDependencies": {
     "nan": "^2.2.0",
     "mocha": "^3.1.2",
-    "node-pre-gyp": "^0.6.19"	
+    "node-pre-gyp": "^0.6.19"
   },
   "dependencies": {
     "bindings": "^1.2.1"
-  }
-
+  },
+  "gypfile": true,
+  "name": "node-avcodec-h264-encoder",
+  "description": "node module to create h264 frame from RGB bitmap",
+  "version": "1.0.0",
+  "directories": {
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sylvain121/node-avcodec-h264-encoder.git"
+  },
+  "author": "sylvain121",
+  "license": "GPL-3.0",
+  "bugs": {
+    "url": "https://github.com/sylvain121/node-avcodec-h264-encoder/issues"
+  },
+  "homepage": "https://github.com/sylvain121/node-avcodec-h264-encoder#readme"
 }
