--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "node-pre-gyp": "^0.6.19"
   },
   "dependencies": {
-    "bindings": "^1.2.1"
+    "bindings": "^1.2.1",
+    "nan": "^2.4.0"
   },
   "gypfile": true,
   "name": "node-avcodec-h264-encoder",
