--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "main": "index.js",
   "scripts": {
-    "configure": "node-gyp configure",
-    "build": "node-gyp build",
-    "test": "mocha",
-    "install": "node-gyp rebuild"
+    "build": "rm -Rf build/; node-gyp configure;node-gyp build",
+    "test": "mocha"
   },
   "devDependencies": {
     "nan": "^2.2.0",
