--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "build": "rm -Rf build/; node-gyp configure;node-gyp build",
     "test": "mocha"
   },
   "devDependencies": {
-    "nan": "^2.2.0",
+    "@types/node": "^14.0.1",
     "mocha": "^3.1.2",
+    "nan": "^2.2.0",
     "node-pre-gyp": "^0.6.19"
   },
   "dependencies": {
